welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: value T is defined twice
var T:Array[Color]
    ^Array1:3: error: not found: value getHauteurMonde
var d:Int=getHauteurMonde()
          ^Array1:4: error: ambiguous reference to overloaded definition,
both method T in class Array1 of type => Array[java.awt.Color]
and  method T in class Array1 of type => Array[java.awt.Color]
match expected type ?
var T = new Array[Color](d)
    ^Array1:9: error: ambiguous reference to overloaded definition,
both method T in class Array1 of type => Array[java.awt.Color]
and  method T in class Array1 of type => Array[java.awt.Color]
match expected type ?
    T(i)=getCouleurSol();
    ^Array1:24: error: ambiguous reference to overloaded definition,
both method T in class Array1 of type => Array[java.awt.Color]
and  method T in class Array1 of type => Array[java.awt.Color]
match argument types (Int) and expected result type java.awt.Color
      setCouleurBrosse(T(i));
                       ^Array1:4: error: method T_= is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Array1'
var T = new Array[Color](d)
    ^Array1:4: error: method T is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Array1'
var T = new Array[Color](d)
    ^